--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "antd": "^5.23.2",
     "axios": "^1.7.9",
     "framer-motion": "^12.0.1",
